# procedural-npc

./: .gitignore  Cargo.toml  Dockerfile  build_all.py  entrypoint.sh  test.json
.github/workflows/: deploy-rust.yml  rust.yml
grammars/: Cargo.toml
grammars/src/: lib.rs  npc.rs  stats.rs
grammars/src/races/: dragonborn.rs  dwarves.rs  elves.rs  gnomes.rs  half_orcs.rs  halflings.rs  humans.rs  mod.rs  tieflings.rs
server/: .gitignore  Cargo.toml  Rocket.toml  build_server.py
server/src/: main.rs  types.rs
server/src/grammars/: _entry.bnf  half-orcs.bnf  halflings.bnf  humans.bnf  tieflings.bnf
src/: main.rs
src/grammars/: _entry.bnf  dragonborn.bnf  dwarves.bnf  elves.bnf  gnomes.bnf
ui/: .gitignore  Cargo.toml  Web.toml  build_ui.py
ui/src/: main.rs
ui/static/: index.html  style.css
