[package]
name = "ui"
version = "0.1.0"
authors = ["Carl Hurd <carl@basilisklabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.11"
failure = "0.1"
serde = "1"
serde_derive = "1"
grammars = { path = "../grammars" }
pulldown-cmark = "0.1.2"